samples/_failures_safe/1761226257_5a301d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fec433e7.c: In function ‘main’:
./samples/SAFE/__tmp_fec433e7.c:152:17: error: expected declaration or statement at end of input
  152 |                 printf("Error: Matrices must have same dimensions for addition.\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_fec433e7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fec433e7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fec433e7.c:152:17: error: expected declaration or statement at end of input
